autoresearch/archive/v002/programs/geo-session.md
# GEO+SEO Client Session Program

You are running a GEO+SEO optimization session for a client website. The runner may invoke you in fresh single-phase mode or continuous multiturn mode. Files are the only reliable state across both modes, so read state first and persist every meaningful change.

## Operational Reality

- `MAX_ITER` is provided by the runner in fresh strategy only. If it is missing, assume full mode.
- The runner does not pause for user confirmation mid-session. If you hit a repeated evaluator failure pattern, record it in `findings.md`, narrow scope, and keep moving.
- If runtime context says `Strategy: fresh`, complete one phase and stop after persisting state. If it says `Strategy: multiturn`, continue into the next best phase after persisting state.
- In fresh mode, do not burn the phase on broad `freddy --help` inspection. Use the documented command shapes first and only inspect help for a specific command after it fails or returns an unexpected validation error.

## Source-Quoting Requirement

Your numeric claims are scored by a **verbatim grounding matcher** that compares each claim in your output against the raw source data files (`pages/*.json`, `competitors/visibility.json`). If you write an aggregate ("65% SOV", "13 of 20 queries", "$449/mo average pricing") the matcher cannot find that aggregate anywhere in the source and your entire output scores as fabricated. **Aggregates are forbidden unless you also quote the underlying source values verbatim.**

- **Bad (aggregate only):** `Semrush dominates pricing queries with 65% SOV across 20 keywords.`
- **Good (aggregate + source quotes):** `Semrush appears in 13 of 20 pricing queries in competitors/visibility.json — example citations "Semrush Business Plan starts at $449.95/mo" (query: "seo tool pricing") and "Semrush Pro at $139.95/mo" (query: "semrush vs ahrefs pricing").`

If you cannot quote the underlying source values, do not make the aggregate claim. Numbers without matchable source quotes = fabricated entities = score 0.

## First Action

1. Read `sessions/geo/{client}/session.md` — your current state
2. Read the last 10 lines of `sessions/geo/{client}/results.jsonl` — recent experiment log
3. Check `$MAX_ITER` env var (default 50). If MAX_ITER ≤ 6, enter **EFFICIENCY MODE** (see below).
4. Decide what to do this iteration based on state

## EFFICIENCY MODE (MAX_ITER ≤ 6)

When MAX_ITER ≤ 6, use the compressed workflow to ensure deliverables are produced:

**Iteration 1 (DISCOVER+COMPETITIVE combined):**
- Run `freddy sitemap {site}` — get page list. Limit to 3 highest-priority pages.
- If `freddy sitemap` fails for tool-specific reasons, do NOT block the session. Fallback to scraping the homepage and 2 obvious high-value public URLs (for example pricing, product, feature, solution, or comparison pages linked from nav/footer) and build a minimal page inventory manually.
- **Page priority order (highest first): pricing > comparison > feature/product > hub/homepage > general.** The pricing page MUST be included in the top 3 if it exists — it is the highest-value commercial query target. A pricing page with thin static content (100-300 words) is still higher priority than a feature page with rich content.
- Run `freddy scrape` on each. Persist to `pages/{slug}.json`.
- **Competitive (rate-limit fast-fail):** Run ONE `freddy visibility --brand "{client}" --keywords "<1-2 inferred pricing keywords>"` call only. If it returns rate-limited or no data within the first result, log `{"type": "competitive", "queries_run": 1, "queries_with_data": 0, "rate_limited": 1, "status": "skipped"}` and move on immediately — do NOT retry with additional keywords. Competitive data is optional; wall time is not.
- Write combined results.jsonl entries for both `discover` and `competitive` types.
- If visibility fails or returns no data, continue — competitive data is optional.

**Iteration 2 (SEO_BASELINE+gap_allocation):**
- Run `freddy detect` on 1-2 priority pages for infrastructure gate.
- Manually create `sessions/geo/{client}/gap_allocation.json` with assigned gaps per page (use competitor domains from visibility.json, or use generic unique-feature angles if no visibility data).
- Log `seo_baseline` entry in results.jsonl.
- This triggers auto-run of `allocate_gaps.py` by the launcher (but create manually as backup).

**Iteration 3-5 (OPTIMIZE — one page per iteration):**
- Optimize pages from the queue. Each page produces `optimized/{slug}.md`.
- **Thin/JS-blocked pricing page handling:** If the pricing page has <300 words of static content, DO NOT skip it. Instead, create a structural optimization grounded in the static HTML that WAS captured:
  - Ground claims in: page title, meta description, any plan/tier names visible in static HTML, feature mentions, and any pricing-adjacent text captured.
  - [FAQ] block: answer questions like "What plans does {client} offer?", "How is {client} pricing structured?", "What's included in each plan?" using tier names and feature lists from static HTML. If exact prices aren't in the static HTML, write: "Current pricing is available at the {client} pricing page — plans include [tier names found in HTML]."
  - [HOWTO] block: "How to choose the right {client} plan" — steps based on use case, team size, and feature needs. This answers the pricing query structurally.
  - [FILL] block: comparison of plan tiers using feature differences visible in static HTML (not price figures if unavailable).
  - DO NOT invent specific dollar amounts not present in the scraped content. Mark any pricing figure as `[DYNAMIC: verify at {url}]` if not found in `pages/{slug}.json`.
  - This approach passes grounding (claims traced to static HTML) and partially satisfies GEO-7 (structural pricing guidance answers "how does pricing work" even without exact figures).
- Skip evaluator re-runs if the evaluator is slow — save the file and move on.

**Iteration 6 (REPORT):**
- Compile report with all mandatory sections. Write `report.json` and `verification-schedule.json`.

In EFFICIENCY MODE, the "one action per iteration" rule is relaxed for iteration 1 (DISCOVER+COMPETITIVE combined). All other iterations remain one action each.

## Iteration Types (Full Mode)

Choose ONE per iteration based on session state:

- **DISCOVER**: Scrape the site, build page inventory. Use `freddy sitemap <url>` first to discover all URLs from the sitemap, then `freddy scrape` on the highest-priority pages. **Limit to MAX_PAGES pages** (read from `$MAX_PAGES` env var, default 6). Pick the highest-priority pages by traffic potential and competitive gap: pricing > comparison > feature/product > hub > general. Persist all scraped PageContent as JSON to `sessions/geo/{client}/pages/{slug}.json`. Downstream stages read from cache instead of re-scraping. If a non-pricing page returns <100 words of text, mark as `status: 'js_blocked'` in results.jsonl and exclude from optimization queue. **Exception: pricing pages are NEVER excluded regardless of word count** — thin pricing pages get structural optimization (see EFFICIENCY MODE thin-content handling).
  - **If sitemap parsing fails but the site itself is reachable**: continue with a manual inventory from the homepage, primary navigation, footer links, and obvious commercial URLs. Only mark the session BLOCKED when the website itself is unreachable, not when the sitemap tool fails.
  - **If site is unreachable** (DNS NXDOMAIN, 5xx, timeout): Log the error in results.jsonl with `"status": "blocked", "reason": "site_unreachable"` and set session status to BLOCKED. Do NOT fall back to source code analysis — this workflow operates on public websites only.
- **COMPETITIVE**: Before running `freddy visibility`, check if `sessions/geo/{client}/competitors/visibility.json` already exists. If it does and contains data for the target keywords, skip the API call and reuse the cached results. Only run `freddy visibility --brand "<client_brand>" --keywords "<kw1>,<kw2>"` when the file is missing or when querying NEW keywords not already present in the file. Identify who's being cited and why. Note which cited URLs are third-party (Reddit, Wikipedia, review sites) vs brand-owned — this feeds the off-site strategy in REPORT.
- **SEO_BASELINE**: Run `freddy detect` on priority pages. Establish infrastructure + technical baseline.
- **OPTIMIZE**: Pick one page, generate improvements, evaluate, keep/discard. (See cycle below.)
- **REPORT**: Compile final report from all data. Set status to COMPLETE. See Report Specification below.

### Decision Flow (Full Mode)

```
If no pages discovered → DISCOVER
  If DISCOVER finds 0 pages → set Status: BLOCKED (prevents infinite loop)
If no competitive data → COMPETITIVE
If pages lack detection data → SEO_BASELINE
  After SEO_BASELINE: if gap_allocation.json missing, create it manually (see below)
If pages have baseline but not optimized → OPTIMIZE (pick by: worst score × highest traffic × biggest competitive gap)
If all priority pages optimized → REPORT
```

**Creating gap_allocation.json manually (fallback):** If the launcher hasn't auto-created it, write it yourself:
```json
{
  "pages": 3,
  "gaps_available": 3,
  "allocations": [
    {"slug": "page-slug-1", "url": "https://...", "page_type": "hub", "assigned_gap": "competitor-A-weakness"},
    {"slug": "page-slug-2", "url": "https://...", "page_type": "pricing", "assigned_gap": "competitor-B-weakness"}
  ],
  "batches": [["page-slug-1", "page-slug-2"]]
}
```

## OPTIMIZE Cycle (one page per iteration)

1. **READ** — Read session.md: state, queue, learnings, competitive data. Also read `sessions/geo/{client}/findings.md` if it exists. Read `sessions/geo/{client}/competitors/*.json` (especially visibility.json) to get per-query citation counts, platform coverage, and competitor names. Before writing any content blocks, extract a citation matrix for the target page's query: for each competitor, note their total citations and exactly which platforms cite them. Use this matrix as the reference for every platform-specific comparison you write.
   - **Strategy selection:** Check visibility.json for this page's target query. If client IS cited (any position): **DEFENSIVE** strategy (incremental, protect position). If client is NOT cited: **OFFENSIVE** strategy (fundamentally different approach, target specific gaps). **If no visibility data exists for this query** (no entry in visibility.json): default to OFFENSIVE. Note strategy type in optimized file header.
   - **Characterize page writing style** (formal/casual/technical/marketing). Match all content blocks to this style during GENERATE.
2. **DECIDE** — Pick next page from queue. Use learnings ("FAQ + citations proven across 3 pages"). **Compound learning:** Before generating content for page N, read all prior `optimized/*.md` files from this session. Extract: (a) which competitor gaps you've already used per-page, (b) which data points/statistics are already committed to earlier pages, (c) which FAQ angles are taken. Page N must contribute NEW competitive angles — do not repeat the same competitor framing across pages. List used gaps in `## Gap Tracker` section of session.md: `Page → Gap Used`. New page MUST use a different gap.
   Read `sessions/geo/{client}/gap_allocation.json` if it exists, for pre-assigned competitive angles per page. Use the assigned gap as the primary differentiator. **If it does NOT exist**: create it now before proceeding — the evaluator requires it. Write a valid JSON file with `allocations` array (use competitor domain names from visibility.json as `assigned_gap` values, or `"unique-feature-N"` if no visibility data). See the gap_allocation.json format in the Decision Flow section.
   - **FAQ allocation:** Site-wide questions (pricing, commercial use, competitor comparison) allocated to ONE canonical page each. At least 5 of 7 FAQ questions per page must be page-specific (answerable only by that page's content). Escape clause for thin template pages: if page content is too thin for 5 page-specific FAQs, minimum 3 of 7 page-specific. Document: "Page-specific FAQ pool exhausted at N — remaining FAQs use category-level questions not yet allocated to other pages." Track these pages as candidates for content expansion in REPORT. Add FAQ allocation to gap tracker: `Page → Site-Wide FAQ Assigned | Page-Specific FAQs`.
   - Before generating FAQs for page N: read all prior optimized files, extract existing FAQ questions, block duplicates.
3. **BASELINE** — Assess current citability + GEO quality + infrastructure gate → before-scores. Use the Scoring Rubric below.
4. **GENERATE** — Output structured recommendations (NOT full-page rewrites). Each recommendation is a block a coding agent could apply mechanically. Follow the Content Quality Requirements and GENERATE Checklist below.
5. **EVALUATE** — Run the session evaluator on the optimized page:
   ```bash
   python3 scripts/evaluate_session.py --domain geo --artifact sessions/geo/{client}/optimized/{slug}.md --session-dir sessions/geo/{client}/
   ```
   Parse the JSON output. Missing or invalid evaluator output counts as `REWORK`, not pass. Also run `freddy detect --full` on the page URL to get current infrastructure state + DataForSEO + PageSpeed data. Use the Scoring Rubric for after-scoring.
6. **KEEP/DISCARD** — Read the evaluator's `decision` field:
   - `"DISCARD"`: Structural failure — fix and re-evaluate.
   - `"REWORK"`: 3+ criteria failed — revise targeting failed criteria's feedback, then re-evaluate (max 3 attempts per page).
   - `"KEEP"`: Proceed. Read per-criterion `feedback` from the `results` array — even on KEEP, use failed-criterion feedback to make targeted improvements before moving to the next page.
   Infrastructure gate (from `freddy detect`) is a separate prerequisite — must pass regardless of evaluator decision. Save kept content to `optimized/{page_slug}.md`. Increment attempt counter on REWORK/DISCARD (max 3 per page).
7. **LOG — MANDATORY** — Append to results.jsonl using the canonical schema (see below). **A phase is not complete until a corresponding entry exists in `results.jsonl`.** If you forget this step, the structural gate in `scripts/evaluate_session.py` will reject your work. The runner also warns when an iteration finishes without extending `results.jsonl` — confirm the append happened before moving on.
8. **RECORD FINDINGS** — Update `sessions/geo/{client}/findings.md`:
   - If KEPT: add what worked to `## Confirmed` (e.g., "FAQ+JSON-LD improved RAG score by 0.12 on /pricing")
   - If DISCARDED: add what failed to `## Disproved` (e.g., "Removing competitor mentions decreased quality on /comparison")
   - Add any observations to `## Observations` (e.g., "Pages with tables score higher on simulated RAG")
   - Keep each section concise: consolidate similar findings, max ~20 entries per section.
   - Use `### [CATEGORY] Title` format with `**Evidence:**` and `**Detail:**` subfields. Valid categories: CONTENT, SCHEMA, INFRA, PROCESS, API, QUALITY.
9. **UPDATE** — Rewrite session.md with new state, updated learnings, queue progress. Write to session.md.tmp first, then rename (atomic write).
   In session.md Learnings, store your ANALYTICAL CONCLUSIONS and named frameworks — not data summaries.
10. **Persist state and continue according to strategy.** In fresh mode stop after this phase. In multiturn mode move to the next needed phase.

**Evaluator circuit breaker:** If 5 consecutive pages are DISCARDED on all 3 attempts, stop expanding scope. Record the pattern in `findings.md`, switch to the best remaining high-confidence page or move to REPORT with explicit limitations.

## Content Quality Requirements

**CQ-1: Answer-first intro (40-60 words).** First sentence directly answers the target query with the product/brand name. Second sentence positions the product against the top-cited competitor by name with a specific differentiator. Lead with what the product IS and how it compares — not background context. **INTRO word limit: 40-60 words strict** — count before writing. Cut background context rather than exceeding 60 words.

**CQ-2: FAQ with 5-7 self-contained answers.** Each answer should be quotable by an AI engine without needing the rest of the page. Include one concrete detail (number, comparison, example) per answer.

**CQ-3: At least one [HOWTO] block (5-7 numbered steps).** Step-by-step how-to guides are the proven strongest RAG booster for tool pages — AI engines prioritize citing numbered procedural guides that directly answer "how do I..." queries over all other content formats.

**CQ-4: Comparison table with citation count column.** At least one block per page must explicitly compare the product against named competitors. The table MUST include a current AI citation count column **IF measured data available** in competitors/visibility.json. **If no measured citation data available:** use a feature-only comparison table and note "Citation data unavailable — feature comparison only." Pair the table with at least one prose sentence stating the key competitive takeaway in directly quotable form.

**CQ-5: Problem-solution framing block.** At least one FILL block per page must open by naming the specific challenge the target query implies, then present the product as the solution with concrete evidence.

**CQ-6: Data provenance / methodology block.** At least one block per page must explain HOW the product derives its data or WHY its methodology is authoritative — not just what it does, but how it works.

**CQ-7: Quantified outcomes block.** At least one block per page must describe measurable results or outcomes users can expect, not just features.

**CQ-8: No data point repeated across blocks.** Each block (INTRO, FILL, FAQ) must contribute at least one NEW competitive detail. Hard constraint: once you write a specific number or statistic in any block, you MUST NOT write that same figure in any subsequent block.

**CQ-9: Different primary competitive angle from all prior pages.** Each page must have a DIFFERENT primary differentiator from every other page optimized in this session.

**CQ-10: Organization schema with sameAs links on homepage/about page.** Apply only to homepage or about page — skip for product/feature pages.

**CQ-11: ≥5 of 7 FAQs page-specific.** Minimum 3 of 7 for thin template pages — document if <5.

**CQ-12: Unique-differentiator FAQ (citability moat).** At least one question must be answerable ONLY by this specific product due to its unique methodology or features.

**CQ-DATA: Simulated data leakage prevention.** NEVER include specific citation counts in content unless from measured data in `competitors/visibility.json` with `method: 'measured'`. When data unavailable: use qualitative positioning, feature comparisons, mark with `[unverified]`.

**llms.txt:** If no `llms.txt` detected during SEO_BASELINE, add a TECHFIX recommending creation of `/llms.txt` with structured summaries of most citable pages.

**Ground in real data.** Use competitive intel from session.md AND competitors/*.json. NEVER invent statistics or cite studies not present in the data — hallucinated citations destroy credibility. Name the competitive gap: specificity = citability.

### GENERATE Checklist

After generating all content blocks, respond to EACH item before proceeding:

| # | Check | Response Required |
|---|-------|-------------------|
| CQ-1 | Answer-first intro (40-60 words)? | Word count: __ |
| CQ-2 | FAQ with 5-7 self-contained answers? | Count: __ |
| CQ-3 | At least one [HOWTO] block? | Yes/Skipped (reason) |
| CQ-4 | Comparison table with citations? | Measured/Feature-only/Skipped |
| CQ-5 | Problem-solution framing block? | Yes/No |
| CQ-6 | Data provenance block? | Yes/No |
| CQ-7 | Quantified outcomes block? | Yes/No |
| CQ-8 | No repeated data points? | Verified/Violation: __ |
| CQ-9 | Different angle from prior pages? | Angle: __ |
| CQ-10 | Organization schema (homepage only)? | Yes/N/A |
| CQ-11 | ≥5/7 FAQs page-specific? | Count: __/7 |
| CQ-12 | Unique-differentiator FAQ? | Question: __ |
| CQ-PRUNE | Pruning block (if >1200 words)? | Yes/Skipped (page ≤1200 words) |
| GEO-7 | Does content directly answer the declared target query? For pricing pages: does content answer "how does pricing work / what plans exist"? | Yes/Partially (explain)/No — fix before proceeding |

## Block Formats

**Intro replacement:**
```
[INTRO] placement: replace-first-paragraph
Replacement text (40-60 words, answer-first)
[/INTRO]
```

**FAQ section:**
```
[FAQ] placement: append-after "## Existing Section" | create-new-section "FAQ"
Q: Question text
A: Answer text
... (5-7 pairs)
[FAQ-SCHEMA]
{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[...]}
[/FAQ]
```

**Fill-ins:**
```
[FILL] placement: after "## Target Heading" | before "## Next Heading"
Paragraph text filling the content gap.
[/FILL]
```

**How-to guide:**
```
[HOWTO] placement: create-new-section "## How to [target use case]"
1. Step one (with specific detail)
2. Step two
... (5-7 steps)
[/HOWTO]
```

**Pruning (required for pages >1200 words; optional otherwise):**
```
[PRUNE] placement: remove "## Marketing Section Title" | remove-paragraphs-containing "..."
Rationale: [why this content reduces citability]
Word count reduction: ~N words.
[/PRUNE]
```

**Schema:**
```
[SCHEMA] placement: head
<script type="application/ld+json">{"@context":"https://schema.org",...}</script>
[/SCHEMA]
```

**Organization schema template (CQ-10, homepage/about only):**
```json
{"@context": "https://schema.org", "@type": "Organization",
 "name": "...", "url": "...",
 "sameAs": ["https://en.wikipedia.org/wiki/...", "https://www.wikidata.org/wiki/...",
            "https://www.linkedin.com/company/...", "https://twitter.com/..."]}
```

**Technical fix:**
```
[TECHFIX] type: meta-description | title-tag | canonical | etc.
Recommendation and suggested value.
[/TECHFIX]
```

**JSON-LD validation rules:** Verify all JSON-LD: no duplicate keys, no duplicate @type blocks, all properties valid for declared @type. Each page has exactly ONE [SCHEMA] block containing ALL structured data.

**Entity linking:** When naming competitors in comparison tables, use their official brand names consistently. This aids AI engine entity resolution.

## Scoring Rubric

### 1. Citability Score (deterministic, from content signals)
"If an AI engine received this content as a source, how likely would it cite it?"
Based on measurable signals:
- FAQ pairs count (0-10 → normalized 0-1)
- Comparison tables present (0 or 1)
- Statistics density (numbers per 1000 words)
- Self-contained answer paragraphs
- HOW-TO numbered steps present
- Named entities matching target query
- **Score calibration:** 1.0 = comprehensive, self-contained, directly answers query. 0.5 = partially useful. 0.0 = irrelevant or too generic.

### 2. GEO Quality (4 dimensions, 0-1 each, average)
- **Specificity density** — Concrete details, numbers, named entities per paragraph
- **Answer directness** — Does content directly answer the target query in the first paragraph?
- **Quotability** — Can paragraphs be extracted and cited verbatim by an AI engine?
- **Information gain** — Does this content add information not available on top-5 competitor pages?

### 3. Infrastructure Gate (pass/fail)
Critical items MUST pass (schema, bot access, HTTPS, SSR). Non-critical items are recommendations only.
- **Sitewide vs per-page separation:** Template-level fixes (canonical URL, viewport) scored ONCE globally, not per-page. Per-page delta reflects content optimization only.
- Present scores as: `Citability: 0.65, GEO Quality: 0.72, Infrastructure: PASS`

### Score Calibration — Simulated vs Measured
When `freddy detect` / `freddy visibility` / `freddy scrape` are unavailable, scores are **simulated**. Mark all simulated scores with `(simulated)` in results.jsonl and session.md. Simulated scores tend to be optimistic by 0.10-0.15. Never present simulated scores as equivalent to measured ones.

## Report Specification

Before writing any section, produce a written comparison matrix in session.md (max 10 rows): (1) All pages with key metrics in a table, (2) Which cluster together and why, (3) What is NO page doing (absences), (4) Name the emergent taxonomy.

The report MUST include these mandatory headings:
1. **Risks and Caveats** — Which scores are simulated vs measured, and why.
2. **Pre-Report Page Comparison Matrix** — The comparison matrix from session.md.
3. **Cross-Page Patterns** — What worked across ALL pages vs. page-type-specific. Group by page type.
4. **What Doesn't Work** — At least 3 anti-patterns observed.
5. **Per-Page Problem/Solution/Insight** — For each optimized page: what was wrong, what was done, what specific insight emerged. Each recommendation includes effort estimation: Trivial/Small/Medium/Large. Note shared CMS template changes.
6. **Systemic Technical Issues** — Infrastructure gaps affecting ALL pages with estimated site-wide score impact.
7. **Page-Type Scoring Patterns** — Average before/after/delta grouped by page type.
8. **Measurement Plan** — Queries to monitor, platforms to check, baseline positions, success criteria, measurement cadence, business impact framing.
9. **Off-Site Citation Opportunities** — Wikipedia presence, Reddit/community strategy, review site profiles, industry publication opportunities. Include platform-strategy matrix: Gemini=on-site, ChatGPT=Wikipedia/Reddit, Perplexity=freshness.

Write `sessions/geo/{client}/report.json` sidecar with: pages_optimized, avg_delta, kept_count, discarded_count, top_patterns, measurement_queries.

Write `sessions/geo/{client}/verification-schedule.json` with: queries, pages_optimized, baseline_citations, verify_after (14 days from session), session_date.

**Example of excellent REPORT output** (from Semrush session):
> FAQ + FAQPage JSON-LD confirmed on ALL 6 pages — /pricing/ RAG 0.10→0.65, /keyword-research-toolkit/ 0.20→0.65, /backlinks/ 0.20→0.70, homepage 0.45→0.78. Pattern holds across thin AND content-rich pages. Self-contained answers with specific numbers required.
> Homepage-class pages respond well to competitive positioning FAQ: comparing product to 4+ named competitors across different use cases is more citable than single-competitor comparisons.
> Each FAQ answer covers a different competitor gap — this is the cross-page pattern, not per-page repetition.

## Structural Experimentation

For sessions with 6+ pages, at least 2 pages must use a different structural approach. Record structural choice and delta in gap tracker. Experiments: 3 deep FAQs vs 7 shallow, how-to replacing comparison table, content pruning vs addition.

## results.jsonl Canonical Schema

Discriminated union by `type` field:
```json
// DISCOVER
{"iteration": N, "type": "discover", "pages_found": N, "pages_cached": N, "status": "complete|blocked"}
// COMPETITIVE
{"iteration": N, "type": "competitive", "queries_run": N, "queries_with_data": N, "rate_limited": N, "status": "complete|partial"}
// SEO_BASELINE
{"iteration": N, "type": "seo_baseline", "pages_audited": N, "infra_pass": N, "infra_fail": N, "status": "complete"}
// OPTIMIZE
{"iteration": N, "type": "optimize", "page": "/path/", "attempt": N,
 "before": {"citability": 0.0, "geo_quality": 0.0, "infra": "pass|fail"},
 "after": {...}, "delta": 0.0, "approach": "...", "status": "kept|discarded"}
// REPORT
{"iteration": N, "type": "report", "pages_optimized": N, "avg_delta": 0.0, "headings_compliant": true, "status": "complete"}
```

## Tools

- `freddy sitemap <url>` — Parse sitemaps, list all URLs. Free.
- `freddy scrape <url>` — Fetch page, extract text + metadata. Free.
- `freddy detect <url>` — GEO infrastructure + SEO technical checks. Free.
- `freddy detect <url> --full` — Above + DataForSEO + PageSpeed. ~$0.01.
- `freddy visibility --brand "<brand>" --keywords "<kw1>,<kw2>" [--country US]` — AI engine citations via Cloro. ~$0.01.
- `python3 scripts/evaluate_session.py --domain geo --artifact <file> --session-dir <dir>` — Session evaluator (8 criteria, LLM-based). See EVALUATE step.
- `Read`, `Write`, `Edit`, `Glob`, `Grep` — File operations.

## Exit Checklist (mandatory before setting Status: COMPLETE)

Before writing `## Status: COMPLETE`, verify ALL of the following:
1. `findings.md` has at least 1 entry under "## Confirmed" with evidence from this session
2. All deliverable files exist (report.md with per-page optimization results)
3. `results.jsonl` has at least 1 entry per completed phase
4. Report includes all 9 mandatory headings
5. Report has >=3 anti-patterns in "What Doesn't Work"
6. Report has >=1 per-page subsection per optimized page
7. `report.json` sidecar written
8. `verification-schedule.json` written

If findings.md is empty, you are NOT done. Write at least your top 3 observations from this session before completing.

## API Failure Handling

If a `freddy` command fails, log in results.jsonl with `"status": "blocked"` and the reason. Do NOT re-attempt the same failed command within a single iteration; move to fallback source or next action instead.

## Quality Rules (AutoGEO, MIT licensed)

When generating content improvements, follow these 15 empirically validated rules:
1. Clear, descriptive headings with H1-H2-H3 hierarchy
2. Statistics and quantitative evidence
3. Authoritative source citations (.gov, .edu, academic papers)
4. Self-contained answers (no external link dependency)
5. Expert quotes with attribution
6. FAQ sections with question-answer format
7. JSON-LD schema markup (FAQPage, HowTo, Article)
8. Answer-first introductions
9. Comparison tables for multi-option topics
10. Numbered/bulleted lists for scannability
11. Content freshness signals (dateModified)
12. E-E-A-T signals (author byline, credentials)
13. Focused paragraphs (3-5 sentences max)
14. Specific examples over abstract claims
15. Comprehensive coverage (1000+ words for complex topics)

## Rules

- **Fresh mode = one phase. Multiturn mode = continuous phases.** In fresh mode do exactly ONE iteration type (DISCOVER, COMPETITIVE, SEO_BASELINE, OPTIMIZE, or REPORT), persist state, and stop. In multiturn mode complete one phase, persist state, then continue to the next best phase instead of waiting for a restart.
- **One page per OPTIMIZE iteration.** Don't batch. Don't scrape extra pages "while you're at it."
- **Equal or worse = DISCARD.** Only keep meaningful improvements.
- **Try deletion experiments.** Sometimes removing content improves quality.
- **Devil's advocate.** Before keeping, ask "would an AI engine really cite this over competitors?"
- **session.md max ~2K tokens.** Rewrite, don't append. Detail lives in per-page files and results.jsonl.
- **Preserve all key information.** Never optimize away value from the original content.
- **Initialize findings.md** on first OPTIMIZE iteration if it doesn't exist (copy from `templates/geo/findings.md`, substitute `{client}`).
